[tool.poetry]
name = "preconfeconviability"
version = "0.1.0"
description = ""
authors = ["Nethermind"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
web3 = "^7.5.0"
tqdm = "^4.67.0"
scipy = "^1.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
